[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Deltastep"
version = "0.1.0"
description = "A python library that 'multiplies by dt' for you"
readme = "README.md"
authors = [
    {name = "Harrison O'Reibow", email = "harrison.oreibow@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]


requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
]

[tool.mypy]
strict = true
show_column_numbers = true

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E741"]
fixable = ["I"]

[tool.pytest.ini_options]
testpaths = "tests"
pythonpath = "."
